--- a/views/rules.jade
+++ b/views/rules.jade
@@ -1,6 +1,8 @@
 extends layout
 
 block content
+  style.
+    body { background: white !important; color: #111 !important; }
   .container
     .row
       .col-xs-12
